Improved authentication and add rest authentication